# USMD-RDSH

./: .coverage  .gitignore  .pylintrc  README.md  USMD-RDSH.docx  pyproject.toml  requirements.txt  setup.py  tox.ini  usmd.example.yaml
scripts/: install.sh  uninstall.sh
tests/: __init__.py  conftest.py  test_coverage_ctl.py  test_coverage_misc.py  test_coverage_ncp_commands.py  test_coverage_node.py  test_coverage_utils.py  test_coverage_web.py  test_crypto.py  test_ctl.py  test_daemon_heartbeat.py  test_daemon_join.py  test_daemon_nrt.py  test_distance_formula.py  test_endorsement.py  test_mutation_assignment.py  test_mutation_catalog.py  test_mutation_dependency_rank.py  test_mutation_lifecycle.py  test_mutation_update_flow.py  test_nal.py  test_ncp_client.py  test_ncp_frame.py  test_ncp_server.py  test_nel.py  test_nit.py  test_nndp_packet.py  test_nndp_service.py  test_node.py  test_node_daemon.py  test_node_role.py  test_node_state.py  test_quorum.py  test_revocation.py  test_service_yaml.py  test_transmutation_dynamic.py  test_usd.py
usmd/: __init__.py  __main__.py  _daemon_heartbeat.py  _daemon_helpers.py  _daemon_init.py  _daemon_join.py  _daemon_mutation_hosting.py  _daemon_mutation_web.py  _daemon_nrt.py  _daemon_peer.py  _daemon_run.py  _daemon_snapshot.py  config.py  node_daemon.py
usmd/ctl/: __init__.py  client.py  server.py
usmd/domain/: __init__.py  _versioned.py  edb.py  usc.py  usd.py
usmd/mutation/: __init__.py  assignment.py  catalog.py  dependency_rank.py  service.py  (+4 more)
usmd_rdsh.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+77 files in other folders)
