[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.tox]
legacy_tox_ini = "tox.ini"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pylint.messages_control]
# R0801: duplicate-code is a false positive here — usc.py and usd.py both
# implement an update_config() method that is intentionally parallel in structure.
disable = ["R0801"]
